fix z-index

--- a/src/entities/checkout/ui/edit-tour-modal/style.css
+++ b/src/entities/checkout/ui/edit-tour-modal/style.css
@@ -13,7 +13,7 @@
 .edit_tour_modal {
     position: fixed;
     left: 0;
-    z-index: 9999;
+    z-index: 999;
     top: 0;
     width: 100%;
     height: 100%;
